fixed modal content not showing after build

--- a/Vefur/thjonustukerfi-react-app/src/components/Customer/Actions/ForceDeleteCustomerAction/ForceDeleteCustomerAction.css
+++ b/Vefur/thjonustukerfi-react-app/src/components/Customer/Actions/ForceDeleteCustomerAction/ForceDeleteCustomerAction.css
@@ -4,8 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: black;
-    opacity: 75%;
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 .modal-text {
